--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.a7invensun.datatoxml.lockscreen.util.SildingFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.a7invensun.verifydemo.lockscreen.util.SildingFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sfl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +10,4 @@
         android:text="11124"
         />
 
-</com.example.a7invensun.datatoxml.lockscreen.util.SildingFinishLayout>
+</com.example.a7invensun.verifydemo.lockscreen.util.SildingFinishLayout>
