状态栏样式、TextView滑动显示内容

--- a/app/src/main/res/layout/activity_slide.xml
+++ b/app/src/main/res/layout/activity_slide.xml
@@ -16,7 +16,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp">
-        <com.example.a7invensun.datatoxml.lockscreen.util.SildingFinishLayout
+        <com.example.a7invensun.verifydemo.lockscreen.util.SildingFinishLayout
             android:id="@+id/relative"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -27,7 +27,7 @@
                 android:layout_height="50dp"
                 android:background="@mipmap/suo" />
 
-        </com.example.a7invensun.datatoxml.lockscreen.util.SildingFinishLayout>
+        </com.example.a7invensun.verifydemo.lockscreen.util.SildingFinishLayout>
     </RelativeLayout>
 
 
