--- a/app/src/main/res/layout/activity_status_bar_show.xml
+++ b/app/src/main/res/layout/activity_status_bar_show.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.a7invensun.verifydemo.statusBar.StatusBarShowActivity">
 
+    <TextView
+        android:id="@+id/text_main"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:gravity="center"
+        android:text="23234555555535435344353452"
+        />
+
 </android.support.constraint.ConstraintLayout>
