--- a/app/src/main/res/layout/activity_camera2.xml
+++ b/app/src/main/res/layout/activity_camera2.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="500dp">
+
         <TextureView
             android:id="@+id/texture"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+        <com.example.a7invensun.verifydemo.cameraDemo.util.FaceView
+            android:id="@+id/faceView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/texture"
+            app:layout_constraintEnd_toEndOf="@id/texture"
+            app:layout_constraintStart_toStartOf="@id/texture"
+            app:layout_constraintTop_toTopOf="@id/texture"
+            android:visibility="gone"
+            />
     </FrameLayout>
 
     <Button
@@ -36,6 +48,7 @@
         android:layout_marginEnd="55dp"
         android:layout_marginRight="55dp"
         android:text="显示图像" />
+
     <Button
         android:id="@+id/photograph_button"
         android:layout_width="wrap_content"
@@ -44,7 +57,6 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="10dp"
         android:text="拍照" />
-
 
 
 </RelativeLayout>
