--- a/app/src/main/res/layout/activity_rx_java__rtrofit.xml
+++ b/app/src/main/res/layout/activity_rx_java__rtrofit.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zhongdun.verifydemo.RxJava_RtrofitActivity">
+    android:orientation="vertical"
+    tools:context="com.example.zhongdun.verifydemo.rx_rt.RxJava_RtrofitActivity">
+    <ProgressBar
+        android:id="@+id/bar"
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:max="100"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        />
+    <TextView
+        android:id="@+id/tv_show_poetry"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:onClick="rx_re_newOnClick"
+        />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
