--- a/app/src/main/res/layout/activity_mq.xml
+++ b/app/src/main/res/layout/activity_mq.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.zhongdun.verifydemo.activemq.MQActivity">
-
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_mq"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:scrollbars="vertical"
+        android:singleLine="false"
+        />
+</LinearLayout>
